--- a/spoors_rcu/linux/CMakeLists.txt
+++ b/spoors_rcu/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "spoors_rcu")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.spoors_rcu")
+set(APPLICATION_ID "com.ltfinance.spoors_rcu")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
