--- a/spoors_rcu/macos/Runner/Configs/AppInfo.xcconfig
+++ b/spoors_rcu/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = spoors_rcu
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.spoorsRcu
+PRODUCT_BUNDLE_IDENTIFIER = com.ltfinance.spoors_rcu
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.ltfinance . All rights reserved.
