--- a/spoors_rcu/pubspec.yaml
+++ b/spoors_rcu/pubspec.yaml
@@ -42,9 +42,9 @@ dependencies:
   # flutter_secure_storage: ^4.2.1
   # encrypt: ^5.0.3
   xml: ^6.3.0
-  device_info_plus: 11.5.0
+  device_info_plus: 11.3.0
   package_info_plus: ^8.3.1
-  flutter_jailbreak_detection: ^1.9.0
+  #flutter_jailbreak_detection: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +76,6 @@ flutter:
   #-----LOCAL ASSETS------#
 
   assets:
-    - assets/images/
-    - assets/icons/
     - assets/data/
     - assets/data/ml/
     - assets/data/nonml/
